--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "echarts": "^5.4.3",
+    "tdesign-vue-next": "^1.5.7",
     "vue": "^3.3.4",
     "vue-echarts": "^6.6.1"
   },
